phase3继续迭代